Fix weird 1px shift in todo buttons

--- a/todo/static/todo/todo.css
+++ b/todo/static/todo/todo.css
@@ -202,7 +202,7 @@
 #content .todo-buttons > * {
     border: none;
     background-color: transparent;
-    padding: 0;
+    padding: 0 1px 0 0;
     color: #666;
     font-family: AlegreyaSans;
     font-style: italic;
